Fixed CSS bugs in dark mode + Adding Dark mode variables + CSS touchup

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,5 @@
+// Light Mode Colors
+
 $font : #595958;
 $fontdark: #4a504f;
 $button : #f28888;
@@ -12,6 +14,16 @@ $outline: #595958;
 $chatyou: rgb(88, 190, 230);
 $chatthem: rgb(159, 180, 188);
 
+
+// Dark Mode Colors
+
+$innerdark: #2a2e2e;
+$outerdark : #151717;
+$bardark: #272c36;
+$inputdark: #3a3f3f;
+
+
+
 #dark {
     *{
         p {
@@ -23,39 +35,45 @@ $chatthem: rgb(159, 180, 188);
 
         input {
             color: white;
-            background-color: #2a2e2e;
+            background-color: $innerdark;
         }
     }
 
 
     .home {
-        background-color: #151717;
+        background-color: $outerdark;
 
         .navbar {
-            background-color: #272c36;
+            background-color: $bardark;
         }
     
         .chatInfo {
-            background-color: #272c36;
+            background-color: $bardark;
         }
         
         .messages, .userChat{
-            background-color: #2a2e2e;
+            background-color: $innerdark;
+        }
+
+        .userChat {
+            &:hover {
+                background-color: $inputdark;
+            }
         }
     
         .input {
-            background-color: #3a3f3f;
+            background-color: $inputdark;
             input {
-                background-color: #3a3f3f;
+                background-color: $inputdark;
             }
         }
     }
 
     .formContainer {
-        background-color: #151717;
+        background-color: $outerdark;
 
         .formWrapper {
-            background-color: #272c36;
+            background-color: $bardark;
 
             input {
                 &::placeholder {
@@ -64,7 +82,7 @@ $chatthem: rgb(159, 180, 188);
             }
 
             button {
-                background-color: #151717;
+                background-color: $outerdark;
                 color:#E8E8E8;
 
                 &:hover {
@@ -74,8 +92,12 @@ $chatthem: rgb(159, 180, 188);
         }
     }
 
+    .sidebar {
+        background-color: $innerdark;
+    }
+
     .switch {
-        background-color: #151717;
+        background-color: $outerdark;
     }
 }
 
@@ -168,7 +190,7 @@ $chatthem: rgb(159, 180, 188);
             transition: 0.7s;
 
             &:hover {
-                background-color: $darker;
+                background-color: #4b5849;
                 color: $lighter;
             }
         }
@@ -212,7 +234,7 @@ $chatthem: rgb(159, 180, 188);
 
         .sidebar {
             background-color: $light;
-            border-right: 1px rgb(0, 0, 0,0.5) solid;
+            border-right: 0.5px black solid;
             flex: 1;
 
             .navbar {
@@ -255,14 +277,13 @@ $chatthem: rgb(159, 180, 188);
             }
 
         .search {
-            border-bottom: 1px solid $font;
             .searchForm {
                 input {
                     width: 100%;
                     height: 50px;
                     padding: 10px;
                     border: none;
-                    border-bottom: 1px solid $font;
+                    border-bottom: 0.5px solid black;
                     background-color: transparent;
                     color: $font;
                     outline: none;
@@ -338,7 +359,7 @@ $chatthem: rgb(159, 180, 188);
             .messages {
                 background-color: $lighter;
                 padding: 10px;
-                height: calc( 100% - 140px );
+                height: calc( 100% - 125px );
                 overflow: scroll;
 
                 .message {
@@ -391,7 +412,7 @@ $chatthem: rgb(159, 180, 188);
             }
 
             .input {
-                height: 70px;
+                height: 55px;
                 background-color: white;
                 box-shadow: 0px -4px 30px rgba(50, 50, 50, 0.1);
                 padding: 10px;
@@ -403,7 +424,7 @@ $chatthem: rgb(159, 180, 188);
                     width: 100%;
                     border: none;
                     outline: none;
-                    font-size: 15pt;
+                    font-size: 12pt;
                     color: $fontdark;
 
                     &::placeholder {
